test/end-to-end/compile-errors/extern-type-errors.crow
main void()
	()

a extern

r record
	a a

b[t] extern

c extern(9999999999, 3)
